# ecc-ldpc

./: .gitignore  G.m  Makefile  NOTES.txt  README.md  ecc-ldpc.cabal  stack.yaml  x.dot  x.ps
codes/: jpl.1K.G  jpl.1K.H  moon.7.13.H
codes/jpl.1K/: G.m  G.q  H.q
codes/jpl.4096.4.5/: G.q  H.q
codes/moon.7.13/: G.alist
cudabits/: arraylet1.cu  arraylet2.cu  cached_mult.cu  cached_mult.cu.bak  cached_mult.cu.bak2  cached_mult.cubin  common.h  two_arrays.cu
main/: Main.hs
src/Data/: Alist.hs  BitVector.hs  Matlab.hs
src/Data/BitMatrix/: Alist.hs  Loader.hs  Matlab.hs  Sparse.hs  Word64.hs
src/Data/BitVector/: Sparse.hs  Word64.hs
src/Data/Matrix/: Matlab.hs  QuasiCyclic.hs
src/Data/Sparse/: BitMatrix.hs  Matrix.hs  ReferenceMatrix.hs
src/ECC/: Puncture.hs
src/ECC/Code/LDPC/: ElimTanh.hs  Model.hs  Reference.hs  Utils.hs  Zero.hs
src/ECC/Code/LDPC/Fast/: Arraylet.hs  ArrayletMin.hs  CachedMult.hs  Encoder.hs
src/ECC/Code/LDPC/GPU/: CachedMult.hs  Reference.hs
src/ECC/Code/LDPC/GPU/CUDA/: Arraylet1.hs  Arraylet2.hs  CachedMult.hs  TwoArrays.hs
src/ECC/Code/LDPC/Reference/: Min.hs  Orig.hs  Sparse.hs  SparseMin.hs
utilities/ExpMatrix/: Main.hs
utilities/Glue64/: Main.hs
