name:                ecc-ldpc
version:             0.1.0
synopsis:            Framework for testing LDPC.
description:
license:             BSD3
license-file:        LICENSE
author:              Andy Gill
maintainer:          Andy Gill <andygill@ku.edu>
copyright:           (C) 2013 The University of Kansas
category:            Codec
build-type:          Simple
cabal-version:       >=1.8

-- Eventually, some of the matrix-specific modules may be factored into a separate package.
library
  exposed-modules:
                ECC.Code.LDPC.Reference,
                ECC.Code.LDPC.Utils,
                ECC.Puncture,
                ECC.Code.LDPC.ElimTanh,
                Data.Alist,
                Data.BitMatrix.Sparse

  build-depends:
                array           == 0.4.*,
                base            == 4.6.*,
                matrix          == 0.2.*,
                mtl             == 2.1.*,
                mwc-random      == 0.13.*,
                statistics      == 0.10.*,
                vector          == 0.10.*,
                ecc-manifold    == 0.1.0
  hs-source-dirs:      src

executable ecc-ldpc
  build-depends:
                array           == 0.4.*,
                base            == 4.6.*,
                matrix          == 0.2.*,
                mtl             == 2.1.*,
                mwc-random      == 0.13.*,
                statistics      == 0.10.*,
                vector          == 0.10.*,
                ecc-manifold    == 0.1.0
  Main-is: Main.hs
  hs-source-dirs: src, main
  Ghc-options: -O2 -threaded

