name:                ecc-ldpc
version:             0.1.0
synopsis:            Framework for testing LDPC.
description:
license:             BSD3
license-file:        LICENSE
author:              Andy Gill
maintainer:          Andy Gill <andygill@ku.edu>
copyright:           (C) 2013 The University of Kansas
category:            Codec
build-type:          Simple
cabal-version:       >=1.8

data-files:
        codes/jpl.1K/*.alist
        codes/jpl.1K/*.m

-- Eventually, some of the matrix-specific modules may be factored into a separate package.
library
  exposed-modules:
                ECC.Code.LDPC.Reference,
                ECC.Code.LDPC.Model,
                ECC.Code.LDPC.Utils,
                Data.BitVector.Sparse,
                ECC.Code.LDPC.ElimTanh,
                Data.BitMatrix.Alist,
                Data.BitVector.Word64,
                Data.BitMatrix.Word64,
                Data.BitMatrix.Matlab,
                Data.BitMatrix.Sparse,
                Data.BitMatrix.Loader
  other-modules:
                Paths_ecc_ldpc


  build-depends:
                array           >= 0.4,
                base            >= 4.6,
                containers      >= 0.5,
                directory       >= 1.2,
                matrix          >= 0.2,
                mtl             >= 2.1,
                mwc-random      >= 0.13,
                semigroups      >= 0.12,
                statistics      >= 0.14,
                vector          >= 0.10,
                ecc-manifold    == 0.1.0,
                zlib            >= 0.5.4 && < 0.7
  hs-source-dirs:      src
  Ghc-options: -O4 -threaded -auto-all

executable ecc-ldpc
  build-depends:
                array           >= 0.4,
                base            >= 4.6,
                containers      >= 0.5,
                directory       >= 1.2,
                matrix          >= 0.2,
                mtl             >= 2.1,
                mwc-random      >= 0.13,
                statistics      >= 0.10,
                semigroups      >= 0.12,
                vector          >= 0.10,
                ecc-manifold    == 0.1.0,
                zlib            >= 0.5.4 && < 0.7
  Main-is: Main.hs
  hs-source-dirs: src, main
  Ghc-options: -O4 -threaded -auto-all

-- cabal configure --enable-executable-profiling 


