name:                ecc-ldpc
version:             0.1.0
synopsis:            Framework for testing LDPC.
description:
license:             BSD3
license-file:        LICENSE
author:              Andy Gill
maintainer:          Andy Gill <andygill@ku.edu>
copyright:           (C) 2013 The University of Kansas
category:            Codec
build-type:          Simple
cabal-version:       >=1.10

data-files:
        codes/jpl.1024.4.5/*.m
        codes/jpl.1024.4.5/*.q
        codes/jpl.1024.4.5/*.alist

-- Eventually, some of the matrix-specific modules may be factored into a separate package.
library
  exposed-modules:
                ECC.Code.LDPC.Reference.Orig,
                ECC.Code.LDPC.Reference.Sparse,
                ECC.Code.LDPC.Reference.Min,
                ECC.Code.LDPC.Reference.SparseMin,
                ECC.Code.LDPC.Fast.ArrayletMin,
                ECC.Code.LDPC.GPU.Reference,
                ECC.Code.LDPC.GPU.CUDA.CachedMult,
                ECC.Code.LDPC.GPU.CUDA.Arraylet1,
                ECC.Code.LDPC.GPU.CUDA.Arraylet2,
                ECC.Code.LDPC.GPU.CUDA.TwoArrays,
                ECC.Code.LDPC.Model,
                ECC.Code.LDPC.Utils,
                Data.BitVector.Sparse,
                ECC.Code.LDPC.ElimTanh,
                ECC.Code.LDPC.Fast.Arraylet,
                ECC.Code.LDPC.Fast.Encoder,
                ECC.Code.LDPC.Fast.CachedMult,
                ECC.Code.LDPC.GPU.CachedMult,
                ECC.Code.LDPC.Zero,
                Data.BitMatrix.Alist,
                Data.BitVector.Word64,
                Data.BitMatrix.Word64,
                Data.BitMatrix.Matlab,
                Data.BitMatrix.Sparse,
                Data.BitMatrix.Loader,
                Data.Sparse.BitMatrix,
                Data.Sparse.Matrix,
                Data.Matrix.QuasiCyclic,
                Data.Matrix.Matlab
  other-modules:
                Paths_ecc_ldpc


  build-depends:
                array           >= 0.4,
                base            >= 4.6,
                containers      >= 0.5,
                directory       >= 1.2,
                matrix          >= 0.2,
                mtl             >= 2.1,
                mwc-random      >= 0.13,
                semigroups      >= 0.12,
                statistics      >= 0.14,
                vector          >= 0.10,
                ecc-manifold    == 0.1.0,
                bitvec          >= 0.1.0.2,
                zlib            >= 0.5.4 && < 0.7,
                accelerate      >= 1.0.0.0,
                accelerate-llvm-ptx >=  1.0.0.1 && < 1.2.0.0,
                accelerate-io   >= 1.0.0.0,
                ekg,
                ekg-core,
                cuda,
                deepseq,
                data-dword      >= 0.3.1.1
  hs-source-dirs:      src
  Ghc-options: -O4 -threaded -auto-all -rtsopts
  default-language: Haskell2010
    -- -debug

executable ecc-ldpc
  build-depends:
                array           >= 0.4,
                base            >= 4.6,
                containers      >= 0.5,
                directory       >= 1.2,
                matrix          >= 0.2,
                mtl             >= 2.1,
                mwc-random      >= 0.13,
                statistics      >= 0.10,
                semigroups      >= 0.12,
                vector          >= 0.10,
                ecc-manifold    == 0.1.0,
                bitvec          >= 0.1.0.2,
                zlib            >= 0.5.4 && < 0.7,
                accelerate      >= 1.0.0.0,
                accelerate-llvm-ptx >=  1.0.0.1 && < 1.2.0.0,
                accelerate-io   >= 1.0.0.0,
                ekg,
                ekg-core,
                cuda,
                deepseq,
                ecc-ldpc
  Main-is: Main.hs
  hs-source-dirs: main
  Ghc-options: -O4 -threaded -auto-all -rtsopts
  default-language: Haskell2010
    -- -debug

executable exp-matrix
  build-depends:
                base            >= 4.6,
                matrix          >= 0.2,
                filepath,
                ecc-ldpc

  Main-is: Main.hs
  hs-source-dirs: utilities/ExpMatrix
  default-language: Haskell2010

executable glue64
  build-depends:
                base            >= 4.6,
                matrix          >= 0.2,
                filepath,
                ecc-ldpc

  Main-is: Main.hs
  hs-source-dirs: utilities/Glue64
  default-language: Haskell2010

-- cabal configure --enable-executable-profiling


